# RaspberryControl

./: CMakeLists.txt  README.md  main.c
Include/: ClientInformations.h  Definitions.h  Logger.h  Serial.h  Tcpip.h
Source/: ClientInformations.c  Logger.c  Serial.c  Tcpip.c
